# SmartSpeech

./: README.md  agents.py  app.py  audio_transcription.py  audioprompt.txt  chatprompt.txt  pyproject.toml  settings.py  test.py
